savingproduct,displaying products,deleting product

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              
               "src/styles.css"
             ],
             "scripts": []
@@ -63,6 +65,7 @@
           }
         },
         "serve": {
+          "bundleDependencies":true,
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "loginapp:build"
