--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "loginapp",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -22,7 +23,8 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
-    "firebase": "^8.2.9",
+    "bootstrap": "^4.6.0",
+    "firebase": "^8.2.10",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
